modified:   templates/base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                     <a href="{{ url_for('log_bp.view_logs') }}" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Logs</a>
                     <a href="{{ url_for('search_bp.token') }}" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200">Search</a>
                     <a href="https://docs.openalgo.in" class="block px-4 py-2 text-sm text-gray-800 hover:bg-gray-200" target="_blank">Docs</a>
-                    <a href="{{ url_for('auth.logout') }}" class="block px-4 py-2 text-sm text-gray-800 hover:bg-red-200" target="_blank">Logout</a>
+                    <a href="{{ url_for('auth.logout') }}" class="block px-4 py-2 text-sm text-gray-800 hover:bg-red-200">Logout</a>
                 </div>
             </div>
 
