--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="max-w-xl mx-auto py-10">
+<div class="max-w-xl mx-auto pt-4 pb-10">
     <h2 class="text-xl font-semibold mb-5">Change Password</h2>
     <div class="mb-4">
         <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
