--- a/templates/broker.html
+++ b/templates/broker.html
@@ -26,7 +26,7 @@
             <!-- Upstox -->
             <div class="bg-gray rounded shadow p-4 flex flex-col items-center">
                 <img src="{{ url_for('static', filename='images/brokers/upstox.png') }}" alt="Upstox Logo" width="100" height="100" class="mb-3">
-                <a href="https://api.upstox.com/index/dialog/oauth?apiKey={{ broker_api_key }}&redirect_uri={{ redirect_url }}" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">Upstox Login</a>
+                <a href="https://api.upstox.com/v2/login/authorization/dialog?response_type=code&client_id={{ broker_api_key }}&redirect_uri={{ redirect_url }}" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">Upstox Login</a>
             </div>
             <!-- Zerodha -->
             <div class="bg-gray rounded shadow p-4 flex flex-col items-center">
