--- a/templates/broker.html
+++ b/templates/broker.html
@@ -21,7 +21,7 @@
             <!-- 5 Paisa (Planned/Inactive) -->
             <div class="bg-gray rounded shadow p-4 flex flex-col items-center">
                 <img src="{{ url_for('static', filename='images/brokers/5paisa.png') }}" alt="5 Paisa Logo" width="100" height="100" class="mb-3">
-                <button class="w-full bg-gray-500 text-white py-2 px-4 rounded cursor-not-allowed" disabled>5 Paisa Login</button>
+                <a href="/5paisa/callback" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center">5Paisa Login</a>
             </div>
             <!-- Angel -->
             <div class="bg-gray rounded shadow p-4 flex flex-col items-center">
