--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,16 @@
 {% block content %}
 <div class="flex items-center justify-center h-full">
     <div class="text-center mt-40">
-        <h1 class="text-8xl font-bold mb-2 gradient-text">OpenDash</h1>
-        <p class="text-sm mb-8">Trading Dashboard for Everyone</p>
-        <div class="flex justify-center space-x-4 mb-8">
+        <h1 class="text-8xl font-bold mb-4 gradient-text" style="line-height: 1.3; padding-bottom: 0.5rem;">OpenAlgo</h1>
+        <p class="text-2xl mb-12">Take Control of Your Algo Platform</p>
+        <div class="flex justify-center space-x-6 mb-12">
             <a href="/login" class="btn btn-primary btn-sm">Login</a>
             <a href="/register" class="btn btn-secondary btn-sm">Register</a>
         </div>
         <div class="flex justify-center items-center">
             <span class="mr-2">Dark</span>
-            <input type="checkbox" value="synthwave" class="toggle theme-controller" />
-            <span class="ml-2">Synthwave</span>
+            <input type="checkbox" value="light" class="toggle theme-controller" />
+            <span class="ml-2">Light</span>
         </div>
     </div>
 </div>
