--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     
     <!-- DaisyUI and Tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet">
-    <script src="{{url_for('static', filename='js/tailwindcss.js')}}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
     
     <!-- Socket.IO -->
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
