--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 </svg>
                 Login
             </a>
-            <a href="/download" class="btn btn-outline">
+            <a href="{{ url_for('core_bp.download')}}" class="btn btn-outline">
                 <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                 </svg>
