--- a/templates/kotak.html
+++ b/templates/kotak.html
@@ -108,7 +108,7 @@
                             </svg>
                             Documentation
                         </a>
-                        <a href="/auth/broker" class="btn btn-outline gap-2">
+                        <a href="{{ url_for('auth.broker_login')}}" class="btn btn-outline gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 17l-5-5m0 0l5-5m-5 5h12"></path>
                             </svg>
