--- a/templates/broker.html
+++ b/templates/broker.html
@@ -20,16 +20,16 @@
 
             switch(platform) {
                 case 'fivepaisa':
-                    loginUrl = '/fivepaisa/callback';
+                    loginUrl = "{{ url_for('brlogin.broker_callback', broker='fivepaisa') }}";
                     break;
                 case 'aliceblue':
-                    loginUrl = '/aliceblue/callback';
+                    loginUrl = "{{ url_for('brlogin.broker_callback', broker='aliceblue') }}";
                     break;
                 case 'angel':
-                    loginUrl = '/angel/callback';
+                    loginUrl = "{{ url_for('brlogin.broker_callback', broker='angel') }}";
                     break;
                 case 'dhan':
-                    loginUrl = '/dhan/callback';
+                    loginUrl = "{{ url_for('brlogin.broker_callback', broker='dhan') }}";
                     break;
                 case 'fyers':
                     loginUrl = 'https://api-t1.fyers.in/api/v3/generate-authcode?client_id={{broker_api_key}}&redirect_uri={{redirect_url}}&response_type=code&state=2e9b44629ebb28226224d09db3ffb47c';
@@ -38,16 +38,16 @@
                     loginUrl = 'https://api.icicidirect.com/apiuser/login?api_key={{broker_api_key}}';
                     break;
                 case 'kotak':
-                    loginUrl = '/kotak/callback';
+                    loginUrl = "{{ url_for('brlogin.broker_callback', broker='kotak') }}";
                     break;
                 case 'shoonya':
-                    loginUrl = '/shoonya/callback';
+                    loginUrl = "{{ url_for('brlogin.broker_callback', broker='shoonya') }}";
                     break;
                 case 'upstox':
                     loginUrl = 'https://api.upstox.com/v2/login/authorization/dialog?response_type=code&client_id={{broker_api_key}}&redirect_uri={{ redirect_url }}';
                     break;
                 case 'zebu':
-                    loginUrl = '/zebu/callback';
+                    loginUrl = "{{ url_for('brlogin.broker_callback', broker='zebu') }}";
                     break;
                 case 'zerodha':
                     loginUrl = 'https://kite.trade/connect/login?api_key={{broker_api_key}}';
