--- a/templates/kotakotp.html
+++ b/templates/kotakotp.html
@@ -30,7 +30,7 @@
                         <img class="h-20 w-auto" src="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}" alt="OpenAlgo">
                     </div>
 
-                    <form action="/kotak/callback" method="POST" class="space-y-4">
+                    <form action="{{ url_for('brlogin.broker_callback', broker='kotak') }}" method="POST" class="space-y-4">
                         <!-- Hidden fields for session data -->
                         <input type="hidden" name="token" value="{{ para.token }}">
                         <input type="hidden" name="sid" value="{{ para.sid }}">
@@ -111,7 +111,7 @@
                             </svg>
                             Documentation
                         </a>
-                        <a href="/auth/broker" class="btn btn-outline gap-2">
+                        <a href="{{ url_for('auth.broker_login')}}" class="btn btn-outline gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 17l-5-5m0 0l5-5m-5 5h12"></path>
                             </svg>
